[package]
name = "iblast-app"
description = "A rust crate supplying binaries for the greed-ioland TCP line server and (if time allows) a REPL"
authors.workspace = true
# documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
tokio = { version = "1.32.0", features = ["full", "mio", "tracing"] }
atty = "0.2.14"
tracing = "0.1.37"
tracing-rolling = "0.1.0"
tracing-subscriber = "0.3.17"
#tracing-subscriber = { version = "0.3.17", features = ["env-filter", "ansi"] }
console-subscriber = "0.1.10"
time = { version = "0.3.24", features = ["macros", "formatting"] }


