[package]
name = "iblast-backend"
description = "A rust crate supplying binaries for the greed-ioland TCP line server and (if time allows) a REPL"
authors.workspace = true
# documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
tokio = { version = "1.32.0", features = ["full", "mio", "tracing"] }
atty = "0.2.14"
tracing = "0.1.37"
tracing-rolling = "0.1.0"
tracing-subscriber = "0.3.17"
#tracing-subscriber = { version = "0.3.17", features = ["env-filter", "ansi"] }
console-subscriber = "0.1.10"
time = { version = "0.3.24", features = ["macros", "formatting"] }
actix-web = { version = "4.4.0", features = ["rustls"] }
actix-web-flash-messages = { version = "0.4.2", features = ["actix-session", "cookies", "sessions"] }
actix-rt = "2.9.0"
lazy_static = "1.4.0"
regex = { version = "1.9.5" }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate", "json", "ipnetwork", "time"] }
url = "2.4.1"
src = "0.0.6"
async-graphql = { version = "6.0.6", features = ["dynamic-schema", "opentelemetry", "secrecy", "serde_cbor", "string_number", "time", "tokio", "tokio-sync", "tracing", "tracing-futures", "url", "uuid"] }
poem = { version = "1.3.58", features = ["x509-parser", "tower", "tower-compat", "tokio-tungstenite", "tokio-stream", "tokio-rustls", "tokio-metrics", "time", "test", "session", "rustls", "redis", "redis-session", "opentelemetry", "multipart", "mime_guess", "csrf", "cookie", "async-compression", "anyhow", "acme-native-roots", "acme-webpki-roots", "acme", "static-files", "websocket"] }
uuid = { version = "1.4.1", features = ["v4", "wasm-bindgen", "fast-rng", "js", "sha1", "zerocopy"] }


