[package]
name = "iblast-plugin-server"
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.3"
structopt = "0.3.26"
