[package]
name = "iblast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bincode = "1.3.3"
chrono = "0.4.30"
chronoutil = "0.2.5"
lazy_static = "1.4.0"
once_cell = "1.18.0"
static_init = { version = "1.0.3", features = ["debug_order"] }
